2008-02-15  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Go back to 2.13.0 as version for now,
	as there was no consensus to do the jump.

	* many other places: Update Since: tags.

2008-02-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols: Add gtk_tool_shell_get_type

	* gtk/gtktestutils.c: Don't generate unnecessary PLT entries

2008-02-15  Richard Hult  <richard@imendio.com>

	* gdk/quartz/GdkQuartzView.c: Adapt to the change to use frame
	instead of bounds when resizing windows.

2008-02-15  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkkeys-x11.c:
	* gdk/x11/gdkcolor-x11.c:
	* gdk/gdkpolyreg-generic.c: Fix a small doc issues.

2008-02-15  Matthias Clasen <mclasen@redhat.com>

	* gdk/x11/gdktestutils-x11.c:
	* gdk/x11/gdkscreen-x11.c: Documentation fixes.

2008-02-15  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkfilesystemwin32.c (get_viewable_logical_drives): Don't
	leak Registry key handles. (#516578)

2008-02-14  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c: (gdk_window_focus): Using
	makeKeyWindow unfortunately doesn't work in all cases, we must use
	makeKeyAndOrderFront.

2008-02-14  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c: (get_fullscreen_geometry),
	(gdk_window_hide), (gdk_window_fullscreen),
	(gdk_window_unfullscreen): Make sure we leave fullscreen mode if
	the window is hidden.

2008-02-14  Richard Hult  <richard@imendio.com>

	* gdk/quartz/GdkQuartzWindow.c: Set frame, not bounds when
	resizing to be consistent and to avoid introducing an internal
	transform in the view.

2008-02-14  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkdisplay-quartz.c: (gdk_display_open): Coding style
	fix.

2008-02-14  Johan Dahlin  <johan@gnome.org>

	* gdk/gdktestutils.h
	* gtk/gtktestutils.h: Remove ; trailing G_BEGIN/END_DECLS

2008-02-13  Richard Hult  <richard@imendio.com>

	* gtk/gtkclipboard-quartz.c: (gtk_clipboard_wait_for_contents):
	Remove unused variables.